--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:support-v4:22.1.1'
     compile 'com.loopj.android:android-async-http:1.4.8'
+    compile 'com.google.code.gson:gson:2.3.1'
 
 }
